PL/aula23d_aula_pub/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> variable_declaration
Rule 5     statement -> assignment
Rule 6     statement -> write_instruction
Rule 7     statement -> function_definition
Rule 8     statement -> function_call
Rule 9     variable_declaration -> VAR ID ASSIGN expression SEMICOLON
Rule 10    assignment -> ID ASSIGN expression SEMICOLON
Rule 11    write_instruction -> PRINT expression_list SEMICOLON
Rule 12    expression_list -> expression
Rule 13    expression_list -> expression_list COMMA expression
Rule 14    expression -> ID
Rule 15    expression -> NUM
Rule 16    expression -> STRING
Rule 17    expression -> LPAREN expression RPAREN
Rule 18    expression -> expression ADD expression
Rule 19    expression -> expression SUB expression
Rule 20    expression -> expression MUL expression
Rule 21    expression -> expression DIV expression
Rule 22    function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
Rule 23    parameter_list -> ID
Rule 24    parameter_list -> parameter_list COMMA ID
Rule 25    function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON
Rule 26    argument_list -> expression
Rule 27    argument_list -> argument_list COMMA expression

Terminals, with rules where they appear

ADD                  : 18
ASSIGN               : 9 10
CALL                 : 25
COMMA                : 13 24 27
DIV                  : 21
FUNCTION             : 22
ID                   : 9 10 14 22 23 24 25
LBRACE               : 22
LPAREN               : 17 22 25
MUL                  : 20
NUM                  : 15
PRINT                : 11
RBRACE               : 22
RPAREN               : 17 22 25
SEMICOLON            : 9 10 11 25
STRING               : 16
SUB                  : 19
VAR                  : 9
error                : 

Nonterminals, with rules where they appear

argument_list        : 25 27
assignment           : 5
expression           : 9 10 12 13 17 18 18 19 19 20 20 21 21 26 27
expression_list      : 11 13
function_call        : 8
function_definition  : 7
parameter_list       : 22 24
program              : 0
statement            : 2 3
statement_list       : 1 3 22
variable_declaration : 4
write_instruction    : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . write_instruction
    (7) statement -> . function_definition
    (8) statement -> . function_call
    (9) variable_declaration -> . VAR ID ASSIGN expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) write_instruction -> . PRINT expression_list SEMICOLON
    (22) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (25) function_call -> . CALL ID LPAREN argument_list RPAREN SEMICOLON

    VAR             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    FUNCTION        shift and go to state 12
    CALL            shift and go to state 13

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    write_instruction              shift and go to state 6
    function_definition            shift and go to state 7
    function_call                  shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . write_instruction
    (7) statement -> . function_definition
    (8) statement -> . function_call
    (9) variable_declaration -> . VAR ID ASSIGN expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) write_instruction -> . PRINT expression_list SEMICOLON
    (22) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (25) function_call -> . CALL ID LPAREN argument_list RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    FUNCTION        shift and go to state 12
    CALL            shift and go to state 13

    statement                      shift and go to state 14
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    write_instruction              shift and go to state 6
    function_definition            shift and go to state 7
    function_call                  shift and go to state 8

state 3

    (2) statement_list -> statement .

    VAR             reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    CALL            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> variable_declaration .

    VAR             reduce using rule 4 (statement -> variable_declaration .)
    ID              reduce using rule 4 (statement -> variable_declaration .)
    PRINT           reduce using rule 4 (statement -> variable_declaration .)
    FUNCTION        reduce using rule 4 (statement -> variable_declaration .)
    CALL            reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)
    RBRACE          reduce using rule 4 (statement -> variable_declaration .)


state 5

    (5) statement -> assignment .

    VAR             reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    PRINT           reduce using rule 5 (statement -> assignment .)
    FUNCTION        reduce using rule 5 (statement -> assignment .)
    CALL            reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> write_instruction .

    VAR             reduce using rule 6 (statement -> write_instruction .)
    ID              reduce using rule 6 (statement -> write_instruction .)
    PRINT           reduce using rule 6 (statement -> write_instruction .)
    FUNCTION        reduce using rule 6 (statement -> write_instruction .)
    CALL            reduce using rule 6 (statement -> write_instruction .)
    $end            reduce using rule 6 (statement -> write_instruction .)
    RBRACE          reduce using rule 6 (statement -> write_instruction .)


state 7

    (7) statement -> function_definition .

    VAR             reduce using rule 7 (statement -> function_definition .)
    ID              reduce using rule 7 (statement -> function_definition .)
    PRINT           reduce using rule 7 (statement -> function_definition .)
    FUNCTION        reduce using rule 7 (statement -> function_definition .)
    CALL            reduce using rule 7 (statement -> function_definition .)
    $end            reduce using rule 7 (statement -> function_definition .)
    RBRACE          reduce using rule 7 (statement -> function_definition .)


state 8

    (8) statement -> function_call .

    VAR             reduce using rule 8 (statement -> function_call .)
    ID              reduce using rule 8 (statement -> function_call .)
    PRINT           reduce using rule 8 (statement -> function_call .)
    FUNCTION        reduce using rule 8 (statement -> function_call .)
    CALL            reduce using rule 8 (statement -> function_call .)
    $end            reduce using rule 8 (statement -> function_call .)
    RBRACE          reduce using rule 8 (statement -> function_call .)


state 9

    (9) variable_declaration -> VAR . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 15


state 10

    (10) assignment -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 16


state 11

    (11) write_instruction -> PRINT . expression_list SEMICOLON
    (12) expression_list -> . expression
    (13) expression_list -> . expression_list COMMA expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression_list                shift and go to state 17
    expression                     shift and go to state 18

state 12

    (22) function_definition -> FUNCTION . ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 23


state 13

    (25) function_call -> CALL . ID LPAREN argument_list RPAREN SEMICOLON

    ID              shift and go to state 24


state 14

    (3) statement_list -> statement_list statement .

    VAR             reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement_list statement .)
    CALL            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 15

    (9) variable_declaration -> VAR ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 25


state 16

    (10) assignment -> ID ASSIGN . expression SEMICOLON
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 26

state 17

    (11) write_instruction -> PRINT expression_list . SEMICOLON
    (13) expression_list -> expression_list . COMMA expression

    SEMICOLON       shift and go to state 27
    COMMA           shift and go to state 28


state 18

    (12) expression_list -> expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    SEMICOLON       reduce using rule 12 (expression_list -> expression .)
    COMMA           reduce using rule 12 (expression_list -> expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 19

    (14) expression -> ID .

    ADD             reduce using rule 14 (expression -> ID .)
    SUB             reduce using rule 14 (expression -> ID .)
    MUL             reduce using rule 14 (expression -> ID .)
    DIV             reduce using rule 14 (expression -> ID .)
    SEMICOLON       reduce using rule 14 (expression -> ID .)
    COMMA           reduce using rule 14 (expression -> ID .)
    RPAREN          reduce using rule 14 (expression -> ID .)


state 20

    (15) expression -> NUM .

    ADD             reduce using rule 15 (expression -> NUM .)
    SUB             reduce using rule 15 (expression -> NUM .)
    MUL             reduce using rule 15 (expression -> NUM .)
    DIV             reduce using rule 15 (expression -> NUM .)
    SEMICOLON       reduce using rule 15 (expression -> NUM .)
    COMMA           reduce using rule 15 (expression -> NUM .)
    RPAREN          reduce using rule 15 (expression -> NUM .)


state 21

    (16) expression -> STRING .

    ADD             reduce using rule 16 (expression -> STRING .)
    SUB             reduce using rule 16 (expression -> STRING .)
    MUL             reduce using rule 16 (expression -> STRING .)
    DIV             reduce using rule 16 (expression -> STRING .)
    SEMICOLON       reduce using rule 16 (expression -> STRING .)
    COMMA           reduce using rule 16 (expression -> STRING .)
    RPAREN          reduce using rule 16 (expression -> STRING .)


state 22

    (17) expression -> LPAREN . expression RPAREN
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 33

state 23

    (22) function_definition -> FUNCTION ID . LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 34


state 24

    (25) function_call -> CALL ID . LPAREN argument_list RPAREN SEMICOLON

    LPAREN          shift and go to state 35


state 25

    (9) variable_declaration -> VAR ID ASSIGN . expression SEMICOLON
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 36

state 26

    (10) assignment -> ID ASSIGN expression . SEMICOLON
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    SEMICOLON       shift and go to state 37
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 27

    (11) write_instruction -> PRINT expression_list SEMICOLON .

    VAR             reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    ID              reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    PRINT           reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    FUNCTION        reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    CALL            reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    $end            reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)
    RBRACE          reduce using rule 11 (write_instruction -> PRINT expression_list SEMICOLON .)


state 28

    (13) expression_list -> expression_list COMMA . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 38

state 29

    (18) expression -> expression ADD . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 39

state 30

    (19) expression -> expression SUB . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 40

state 31

    (20) expression -> expression MUL . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 41

state 32

    (21) expression -> expression DIV . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 42

state 33

    (17) expression -> LPAREN expression . RPAREN
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    RPAREN          shift and go to state 43
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 34

    (22) function_definition -> FUNCTION ID LPAREN . parameter_list RPAREN LBRACE statement_list RBRACE
    (23) parameter_list -> . ID
    (24) parameter_list -> . parameter_list COMMA ID

    ID              shift and go to state 44

    parameter_list                 shift and go to state 45

state 35

    (25) function_call -> CALL ID LPAREN . argument_list RPAREN SEMICOLON
    (26) argument_list -> . expression
    (27) argument_list -> . argument_list COMMA expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    argument_list                  shift and go to state 46
    expression                     shift and go to state 47

state 36

    (9) variable_declaration -> VAR ID ASSIGN expression . SEMICOLON
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    SEMICOLON       shift and go to state 48
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 37

    (10) assignment -> ID ASSIGN expression SEMICOLON .

    VAR             reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    PRINT           reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    FUNCTION        reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    CALL            reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 10 (assignment -> ID ASSIGN expression SEMICOLON .)


state 38

    (13) expression_list -> expression_list COMMA expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    SEMICOLON       reduce using rule 13 (expression_list -> expression_list COMMA expression .)
    COMMA           reduce using rule 13 (expression_list -> expression_list COMMA expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 39

    (18) expression -> expression ADD expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SEMICOLON       reduce using rule 18 (expression -> expression ADD expression .)
    COMMA           reduce using rule 18 (expression -> expression ADD expression .)
    RPAREN          reduce using rule 18 (expression -> expression ADD expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! ADD             [ reduce using rule 18 (expression -> expression ADD expression .) ]
  ! SUB             [ reduce using rule 18 (expression -> expression ADD expression .) ]
  ! MUL             [ reduce using rule 18 (expression -> expression ADD expression .) ]
  ! DIV             [ reduce using rule 18 (expression -> expression ADD expression .) ]


state 40

    (19) expression -> expression SUB expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SEMICOLON       reduce using rule 19 (expression -> expression SUB expression .)
    COMMA           reduce using rule 19 (expression -> expression SUB expression .)
    RPAREN          reduce using rule 19 (expression -> expression SUB expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! ADD             [ reduce using rule 19 (expression -> expression SUB expression .) ]
  ! SUB             [ reduce using rule 19 (expression -> expression SUB expression .) ]
  ! MUL             [ reduce using rule 19 (expression -> expression SUB expression .) ]
  ! DIV             [ reduce using rule 19 (expression -> expression SUB expression .) ]


state 41

    (20) expression -> expression MUL expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SEMICOLON       reduce using rule 20 (expression -> expression MUL expression .)
    COMMA           reduce using rule 20 (expression -> expression MUL expression .)
    RPAREN          reduce using rule 20 (expression -> expression MUL expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! ADD             [ reduce using rule 20 (expression -> expression MUL expression .) ]
  ! SUB             [ reduce using rule 20 (expression -> expression MUL expression .) ]
  ! MUL             [ reduce using rule 20 (expression -> expression MUL expression .) ]
  ! DIV             [ reduce using rule 20 (expression -> expression MUL expression .) ]


state 42

    (21) expression -> expression DIV expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SEMICOLON       reduce using rule 21 (expression -> expression DIV expression .)
    COMMA           reduce using rule 21 (expression -> expression DIV expression .)
    RPAREN          reduce using rule 21 (expression -> expression DIV expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! ADD             [ reduce using rule 21 (expression -> expression DIV expression .) ]
  ! SUB             [ reduce using rule 21 (expression -> expression DIV expression .) ]
  ! MUL             [ reduce using rule 21 (expression -> expression DIV expression .) ]
  ! DIV             [ reduce using rule 21 (expression -> expression DIV expression .) ]


state 43

    (17) expression -> LPAREN expression RPAREN .

    ADD             reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    SUB             reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    MUL             reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    DIV             reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    COMMA           reduce using rule 17 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 17 (expression -> LPAREN expression RPAREN .)


state 44

    (23) parameter_list -> ID .

    RPAREN          reduce using rule 23 (parameter_list -> ID .)
    COMMA           reduce using rule 23 (parameter_list -> ID .)


state 45

    (22) function_definition -> FUNCTION ID LPAREN parameter_list . RPAREN LBRACE statement_list RBRACE
    (24) parameter_list -> parameter_list . COMMA ID

    RPAREN          shift and go to state 49
    COMMA           shift and go to state 50


state 46

    (25) function_call -> CALL ID LPAREN argument_list . RPAREN SEMICOLON
    (27) argument_list -> argument_list . COMMA expression

    RPAREN          shift and go to state 51
    COMMA           shift and go to state 52


state 47

    (26) argument_list -> expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    RPAREN          reduce using rule 26 (argument_list -> expression .)
    COMMA           reduce using rule 26 (argument_list -> expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 48

    (9) variable_declaration -> VAR ID ASSIGN expression SEMICOLON .

    VAR             reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    PRINT           reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    FUNCTION        reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    CALL            reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 9 (variable_declaration -> VAR ID ASSIGN expression SEMICOLON .)


state 49

    (22) function_definition -> FUNCTION ID LPAREN parameter_list RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 53


state 50

    (24) parameter_list -> parameter_list COMMA . ID

    ID              shift and go to state 54


state 51

    (25) function_call -> CALL ID LPAREN argument_list RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 55


state 52

    (27) argument_list -> argument_list COMMA . expression
    (14) expression -> . ID
    (15) expression -> . NUM
    (16) expression -> . STRING
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression

    ID              shift and go to state 19
    NUM             shift and go to state 20
    STRING          shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 56

state 53

    (22) function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . write_instruction
    (7) statement -> . function_definition
    (8) statement -> . function_call
    (9) variable_declaration -> . VAR ID ASSIGN expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) write_instruction -> . PRINT expression_list SEMICOLON
    (22) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (25) function_call -> . CALL ID LPAREN argument_list RPAREN SEMICOLON

    VAR             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    FUNCTION        shift and go to state 12
    CALL            shift and go to state 13

    statement_list                 shift and go to state 57
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    write_instruction              shift and go to state 6
    function_definition            shift and go to state 7
    function_call                  shift and go to state 8

state 54

    (24) parameter_list -> parameter_list COMMA ID .

    RPAREN          reduce using rule 24 (parameter_list -> parameter_list COMMA ID .)
    COMMA           reduce using rule 24 (parameter_list -> parameter_list COMMA ID .)


state 55

    (25) function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .

    VAR             reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    ID              reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    PRINT           reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    FUNCTION        reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    CALL            reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    $end            reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)
    RBRACE          reduce using rule 25 (function_call -> CALL ID LPAREN argument_list RPAREN SEMICOLON .)


state 56

    (27) argument_list -> argument_list COMMA expression .
    (18) expression -> expression . ADD expression
    (19) expression -> expression . SUB expression
    (20) expression -> expression . MUL expression
    (21) expression -> expression . DIV expression

    RPAREN          reduce using rule 27 (argument_list -> argument_list COMMA expression .)
    COMMA           reduce using rule 27 (argument_list -> argument_list COMMA expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 57

    (22) function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list . RBRACE
    (3) statement_list -> statement_list . statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . write_instruction
    (7) statement -> . function_definition
    (8) statement -> . function_call
    (9) variable_declaration -> . VAR ID ASSIGN expression SEMICOLON
    (10) assignment -> . ID ASSIGN expression SEMICOLON
    (11) write_instruction -> . PRINT expression_list SEMICOLON
    (22) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (25) function_call -> . CALL ID LPAREN argument_list RPAREN SEMICOLON

    RBRACE          shift and go to state 58
    VAR             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    FUNCTION        shift and go to state 12
    CALL            shift and go to state 13

    statement                      shift and go to state 14
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    write_instruction              shift and go to state 6
    function_definition            shift and go to state 7
    function_call                  shift and go to state 8

state 58

    (22) function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .

    VAR             reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    ID              reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    PRINT           reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    FUNCTION        reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    CALL            reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    $end            reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)
    RBRACE          reduce using rule 22 (function_definition -> FUNCTION ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for ADD in state 39 resolved as shift
WARNING: shift/reduce conflict for SUB in state 39 resolved as shift
WARNING: shift/reduce conflict for MUL in state 39 resolved as shift
WARNING: shift/reduce conflict for DIV in state 39 resolved as shift
WARNING: shift/reduce conflict for ADD in state 40 resolved as shift
WARNING: shift/reduce conflict for SUB in state 40 resolved as shift
WARNING: shift/reduce conflict for MUL in state 40 resolved as shift
WARNING: shift/reduce conflict for DIV in state 40 resolved as shift
WARNING: shift/reduce conflict for ADD in state 41 resolved as shift
WARNING: shift/reduce conflict for SUB in state 41 resolved as shift
WARNING: shift/reduce conflict for MUL in state 41 resolved as shift
WARNING: shift/reduce conflict for DIV in state 41 resolved as shift
WARNING: shift/reduce conflict for ADD in state 42 resolved as shift
WARNING: shift/reduce conflict for SUB in state 42 resolved as shift
WARNING: shift/reduce conflict for MUL in state 42 resolved as shift
WARNING: shift/reduce conflict for DIV in state 42 resolved as shift
